# example-cmake-package

./: CMakeLists.txt  README.md  cmake-package.cpp
cmake/: Custom-CPConfig.cmake
test_project/: CMakeLists.txt  main.cpp
